# ID7_data

./: .gitignore  CLAUDE.md  collect.py  config.example.json  derive_sessions.py  init_db.py  pyproject.toml  schema.sql
docs/: project.md  roadmap.md
docs/plans/: phase2-collection-storage-grafana.md
grafana/: docker-compose.yml
grafana/dashboards/: id7.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: sqlite.yaml
launchd/: README.md  com.id7data.collect.plist  com.id7data.derive.plist
